tests/data-clumps/test-cases/parameter-field/simple/negative/typescript/source/PatientService.ts
export class PatientService {
  updateContact(patientId: number, isActive: boolean, contactCode: number): void {
    console.log(
      `Updating contact details for patient ${patientId} (active: ${isActive}) with contact code ${contactCode}`
    );
  }
}
